# gestione-pareri

./: .actrc  .codacy.yml  .coveragerc  .djlintrc  .env.example  .env.local.example  .env.macos.example  .env.postgresql.example  .env.prod.template  .env.staging.template  .flake8  .gitignore  .markdownlint-cli2.json  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .pre-commit-config-corporate.yaml  .pre-commit-config-cross-platform.yaml  .pre-commit-config-macos.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .pylintrc  Makefile  README.md  TEMPLATE.md  justfile  justfile.linux_mac  justfile.macOS  justfile.windows  justfile_complete  main.py  package.json  postgresql_commands.txt  pylintrc  pyproject.toml  pytest.ini  ruff.toml  safety.yml  (+6 more)
.config/: .markdownlint-cli2.json  .markdownlint-cli2.jsonc  .pylintrc  djlintrc  flake8  markdownlint.json  prettierrc.json  ruff.toml
.github/: .github-actions-lint.yml  dependabot.yml
.github/workflows/: ai-review.yml  codacy-analysis.yml  codeql-analysis.yml  coverage.yml  django.yml  pre-commit.yml  safety.yml  sonarcloud.yml
config/: README.md
config/database/: postgresql_commands.txt  update_postgresql_staging.template.sql
config/deployment/: deployment-plan.md  setup_macos_instructions.md  web.config.template
config/environments/: .env.dev.template  .env.test.template
deployment/: README.md  django.service  nginx.conf  setup-iis.ps1  web.config
docs/: PRODUCTION_DEPLOYMENT.md  README.md  README_SETTINGS.md  RENDER_START_COMMAND.md  SECURITY_DEPLOYMENT.md  code_analysis.md  database-security.md  database-setup.md  deployment-plan.md  docstring_generation.md  environment-variables.md  environments-guide.md  frontend-integration.md  iis-deployment.md  just.md  linting_notes.md  logging.md  logging_utils.md  logs_configuration.md  make.md  markdown-formatting.md  nginx-deployment.md  nginx-uvicorn-deploy.md  nodejs-integration-backup.md  nodejs-integration.md  postgresql-setup-commands.md  precommit-setup.md  quick-start.md  setup-home.md  sonarqube.md  tailwind-integration.md  test-markdown.md  testing-guide.md  uv-guide.md  uvicorn-integration.md  uvicorn-nssm-windows.md  vscode-configuration.md  vscode-detailed.md
docs/ai-review-configs/: .coderabbit.yml  .sourcery.yaml  README.md  ai-review.yml
examples/: README.md  check_logging.py  logging_example.py
fixtures/: initial_data.json
media/: README.md
scripts/: README.md  configure-terminal-font.ps1  configure-vscode-font.ps1  db_test_clean.py  fix_md012.py  fix_md029.py  fix_md031.py  help.py  install-make-linux.sh  install-make-macos.sh  install-make-windows.ps1  install-markdown-tools.ps1  install-markdown-tools.sh  patch-nodeenv.py  pre-commit-corporate.bat  run_djlint.py  run_pylint.py  setup-corporate-ssl.ps1  setup-precommit-corporate.ps1  setup-ssl-corporate.ps1  setup-uv-precommit-ssl.ps1  setup.ps1  setup.sh
scripts/deployment/: README.md  deploy-iis.ps1  generate_nginx_conf.py  nginx_gestione-pareri.conf  production-deploy.ps1  start-gunicorn.sh  start-uvicorn-render.sh  start-uvicorn.ps1  start-uvicorn.sh  start-waitress.ps1  test-iis-local-NEW.ps1  test-iis-local.ps1  test-uvicorn-local.ps1  test-uvicorn-local.sh
src/: README_SETTINGS.md  manage.py  test_logging.py
src/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  test_forms.py  tests.py  views.py
src/accounts/management/: __init__.py
src/accounts/management/commands/: __init__.py  init_groups_permissions.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_admin.py  test_commands.py  test_forms.py  test_init_groups_permissions.py  test_models.py  test_views.py
src/home/: __init__.py  asgi.py  logging_utils.py  settings.py  urls.py  views.py  wsgi.py
src/home/settings/: __init__.py  base.py  dev.py  prod.py  staging.py  test.py  test_local.py
src/home/tests/: __init__.py  test_logging_utils.py  test_views.py
src/static/: README.md
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  hello-world.html
tools/: add_docstring.bat  add_docstring.py  add_docstring.sh  add_docstring_batch.py  check_env.py  check_import.py  check_settings.py  env_test.py  fix_markdown.py  generate_db_passwords.py  init_groups_permissions.py  project_stats.py  quality_dashboard.md  run_sonarqube.ps1  run_sonarqube.sh
