[project]
name = "deploy-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "colorama>=0.4.6",
    "django===5.2.0",
    "djlint>=1.36.4",
    "python-decouple>=3.8",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
    "pylint-django>=2.6.1",
    "ruff>=0.12.10",
]

[tool.djlint]
profile="django"
ignore = "H031"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/logging_example.py" = ["E402"]
"examples/check_logging.py" = ["E402"]
"src/home/settings.py" = ["F401", "F403"]
"src/home/settings/*.py" = ["F401", "F403"]
"tools/add_docstring_batch.py" = ["E402"]

[tool.ruff.lint.isort]
known-third-party = ["django"]
known-first-party = ["home"]
