[project]
name = "deploy-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "django===5.2.0",
    "djlint>=1.36.4",
    "python-decouple>=3.8",
    "ruff>=0.12.10",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pylint>=3.3.8",
    "pylint-django>=2.6.1",
]

[tool.djlint]
profile="django"
ignore = "H031"

[tool.ruff]
# Configurazione generale
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Regole da attivare
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-third-party = ["django"]
known-first-party = ["home"]

[tool.ruff.lint.per-file-ignores]
"examples/logging_example.py" = ["E402"]
"examples/check_logging.py" = ["E402"]
"src/home/settings.py" = ["F401", "F403"]
"src/home/settings/*.py" = ["F401", "F403"]
"tools/add_docstring_batch.py" = ["E402"]
"src/test_logging.py" = ["E402"]
